Entrega Proyectos año 2015/TP_Final Fernando Resquin/ANTRL/output/JarvisCommandParser.java
// $ANTLR 3.5.1 C:\\ANTRL\\JarvisCommand.g 2016-04-01 16:02:39
 

	import java.util.ArrayList;
	import java.lang.Math;
	import java.io.PrintWriter;		// Para generar el script de salida
	import java.util.HashMap;		// Para almacenar variables
	import java.io.BufferedReader;		// Para leer la base del script a generar
	import java.io.File;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class JarvisCommandParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMA", "FINISH", "FLOAT", "FORWARD", 
		"INIT", "INTEGER", "NUM_ENTERO", "NUM_FLOT", "PAR1", "PAR2", "SIGN", "TURN_LEFT", 
		"TURN_RIGHT", "WHITESPACE"
	};
	public static final int EOF=-1;
	public static final int COMA=4;
	public static final int FINISH=5;
	public static final int FLOAT=6;
	public static final int FORWARD=7;
	public static final int INIT=8;
	public static final int INTEGER=9;
	public static final int NUM_ENTERO=10;
	public static final int NUM_FLOT=11;
	public static final int PAR1=12;
	public static final int PAR2=13;
	public static final int SIGN=14;
	public static final int TURN_LEFT=15;
	public static final int TURN_RIGHT=16;
	public static final int WHITESPACE=17;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "percent", "func4", "radio", "lenght", "func6", "expr", 
		"func3", "expr_init", "func2", "speed", "quarter", "func5"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public JarvisCommandParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public JarvisCommandParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public JarvisCommandParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return JarvisCommandParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\ANTRL\\JarvisCommand.g"; }


		PrintWriter writer;
		HashMap variables = new HashMap();
		HashMap valores = new HashMap();
		int flag = 0;
		public void main(String[] args) throws Exception {
			JarvisCommandLexer lex = new JarvisCommandLexer(new ANTLRFileStream(args[0]));
			CommonTokenStream tokens = new CommonTokenStream(lex);
			JarvisCommandParser parser = new JarvisCommandParser(tokens);
			try {
				parser.expr();
			}catch (RecognitionException e){
				e.printStackTrace();
			}
		
		}



	// $ANTLR start "expr_init"
	// C:\\ANTRL\\JarvisCommand.g:46:2: expr_init : ( func5 ) expr ( func6 ) ;
	public final void expr_init() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "expr_init");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(46, 1);

		try {
			// C:\\ANTRL\\JarvisCommand.g:46:13: ( ( func5 ) expr ( func6 ) )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:46:15: ( func5 ) expr ( func6 )
			{
			dbg.location(46,15);
			// C:\\ANTRL\\JarvisCommand.g:46:15: ( func5 )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:46:16: func5
			{
			dbg.location(46,16);
			pushFollow(FOLLOW_func5_in_expr_init102);
			func5();
			state._fsp--;

			}
			dbg.location(46,25);
			pushFollow(FOLLOW_expr_in_expr_init106);
			expr();
			state._fsp--;
			dbg.location(46,32);
			// C:\\ANTRL\\JarvisCommand.g:46:32: ( func6 )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:46:33: func6
			{
			dbg.location(46,33);
			pushFollow(FOLLOW_func6_in_expr_init110);
			func6();
			state._fsp--;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(46, 38);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "expr_init");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "expr_init"



	// $ANTLR start "expr"
	// C:\\ANTRL\\JarvisCommand.g:47:2: expr : ( ( func2 ) | ( func3 ) | ( func4 ) )+ ;
	public final void expr() throws RecognitionException {
		try { dbg.enterRule(getGrammarFileName(), "expr");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(47, 1);

		try {
			// C:\\ANTRL\\JarvisCommand.g:47:7: ( ( ( func2 ) | ( func3 ) | ( func4 ) )+ )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:47:9: ( ( func2 ) | ( func3 ) | ( func4 ) )+
			{
			dbg.location(47,9);
			// C:\\ANTRL\\JarvisCommand.g:47:9: ( ( func2 ) | ( func3 ) | ( func4 ) )+
			int cnt1=0;
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=4;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				switch ( input.LA(1) ) {
				case TURN_LEFT:
					{
					alt1=1;
					}
					break;
				case TURN_RIGHT:
					{
					alt1=2;
					}
					break;
				case FORWARD:
					{
					alt1=3;
					}
					break;
				}
				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\ANTRL\\JarvisCommand.g:47:10: ( func2 )
					{
					dbg.location(47,10);
					// C:\\ANTRL\\JarvisCommand.g:47:10: ( func2 )
					dbg.enterAlt(1);

					// C:\\ANTRL\\JarvisCommand.g:47:11: func2
					{
					dbg.location(47,11);
					pushFollow(FOLLOW_func2_in_expr121);
					func2();
					state._fsp--;

					}

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// C:\\ANTRL\\JarvisCommand.g:47:20: ( func3 )
					{
					dbg.location(47,20);
					// C:\\ANTRL\\JarvisCommand.g:47:20: ( func3 )
					dbg.enterAlt(1);

					// C:\\ANTRL\\JarvisCommand.g:47:21: func3
					{
					dbg.location(47,21);
					pushFollow(FOLLOW_func3_in_expr127);
					func3();
					state._fsp--;

					}

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// C:\\ANTRL\\JarvisCommand.g:47:30: ( func4 )
					{
					dbg.location(47,30);
					// C:\\ANTRL\\JarvisCommand.g:47:30: ( func4 )
					dbg.enterAlt(1);

					// C:\\ANTRL\\JarvisCommand.g:47:31: func4
					{
					dbg.location(47,31);
					pushFollow(FOLLOW_func4_in_expr133);
					func4();
					state._fsp--;

					}

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt1++;
			}
			} finally {dbg.exitSubRule(1);}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(47, 38);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "expr");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "expr"



	// $ANTLR start "quarter"
	// C:\\ANTRL\\JarvisCommand.g:50:2: quarter returns [int value] : NUM_ENTERO ;
	public final int quarter() throws RecognitionException {
		int value = 0;


		Token NUM_ENTERO1=null;

		try { dbg.enterRule(getGrammarFileName(), "quarter");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(50, 1);

		try {
			// C:\\ANTRL\\JarvisCommand.g:51:3: ( NUM_ENTERO )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:51:5: NUM_ENTERO
			{
			dbg.location(51,5);
			NUM_ENTERO1=(Token)match(input,NUM_ENTERO,FOLLOW_NUM_ENTERO_in_quarter154); dbg.location(52,3);

			 	value = Integer.parseInt((NUM_ENTERO1!=null?NUM_ENTERO1.getText():null));
			 	if(value < 1 || value > 2) {
			 		System.err.println("Error en el ángulo de giro");
			 		value = 255;
			 	} 
			 	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(59, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "quarter");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return value;
	}
	// $ANTLR end "quarter"



	// $ANTLR start "percent"
	// C:\\ANTRL\\JarvisCommand.g:61:2: percent returns [int value] : NUM_ENTERO ;
	public final int percent() throws RecognitionException {
		int value = 0;


		Token NUM_ENTERO2=null;

		try { dbg.enterRule(getGrammarFileName(), "percent");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(61, 1);

		try {
			// C:\\ANTRL\\JarvisCommand.g:62:3: ( NUM_ENTERO )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:62:5: NUM_ENTERO
			{
			dbg.location(62,5);
			NUM_ENTERO2=(Token)match(input,NUM_ENTERO,FOLLOW_NUM_ENTERO_in_percent177); dbg.location(63,3);

			 	value = Integer.parseInt((NUM_ENTERO2!=null?NUM_ENTERO2.getText():null));
			 	if(value < 0 || value > 100) {
			 		System.err.println("Error en el ángulo de giro");
			 		value = 255;
			 	} 
			 	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(70, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "percent");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return value;
	}
	// $ANTLR end "percent"



	// $ANTLR start "lenght"
	// C:\\ANTRL\\JarvisCommand.g:72:1: lenght returns [Double value] : NUM_FLOT ;
	public final Double lenght() throws RecognitionException {
		Double value = null;


		Token NUM_FLOT3=null;

		try { dbg.enterRule(getGrammarFileName(), "lenght");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(72, 0);

		try {
			// C:\\ANTRL\\JarvisCommand.g:73:3: ( NUM_FLOT )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:74:2: NUM_FLOT
			{
			dbg.location(74,2);
			NUM_FLOT3=(Token)match(input,NUM_FLOT,FOLLOW_NUM_FLOT_in_lenght200); dbg.location(75,2);

			 	value = Double.parseDouble((NUM_FLOT3!=null?NUM_FLOT3.getText():null));
			 	if(value <= 0.0){
			 	 	System.err.println("El largo de avance no debe ser negativo");
			 	 	value = -1.0;
			 	}
			 	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(82, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "lenght");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return value;
	}
	// $ANTLR end "lenght"



	// $ANTLR start "radio"
	// C:\\ANTRL\\JarvisCommand.g:84:1: radio returns [Double value] : NUM_FLOT ;
	public final Double radio() throws RecognitionException {
		Double value = null;


		Token NUM_FLOT4=null;

		try { dbg.enterRule(getGrammarFileName(), "radio");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(84, 0);

		try {
			// C:\\ANTRL\\JarvisCommand.g:85:3: ( NUM_FLOT )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:86:2: NUM_FLOT
			{
			dbg.location(86,2);
			NUM_FLOT4=(Token)match(input,NUM_FLOT,FOLLOW_NUM_FLOT_in_radio222); dbg.location(87,2);

			 	value = Double.parseDouble((NUM_FLOT4!=null?NUM_FLOT4.getText():null));
			 	if(value <= 0.0){
			 	 	System.err.println("El radio de la curva no debe ser negativo");
			 	 	value = -1.0;
			 	}
			 	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(94, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "radio");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return value;
	}
	// $ANTLR end "radio"



	// $ANTLR start "speed"
	// C:\\ANTRL\\JarvisCommand.g:96:1: speed returns [Double value] : NUM_FLOT ;
	public final Double speed() throws RecognitionException {
		Double value = null;


		Token NUM_FLOT5=null;

		try { dbg.enterRule(getGrammarFileName(), "speed");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(96, 0);

		try {
			// C:\\ANTRL\\JarvisCommand.g:97:3: ( NUM_FLOT )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:98:2: NUM_FLOT
			{
			dbg.location(98,2);
			NUM_FLOT5=(Token)match(input,NUM_FLOT,FOLLOW_NUM_FLOT_in_speed244); dbg.location(99,2);

			 	value = Double.parseDouble((NUM_FLOT5!=null?NUM_FLOT5.getText():null));
			 	if(value <= 0.0){
			 	 	System.err.println("La velocidad de movimiento no debe ser negativa");
			 	 	value = -1.0;
			 	}
			 	
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(106, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "speed");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return value;
	}
	// $ANTLR end "speed"



	// $ANTLR start "func2"
	// C:\\ANTRL\\JarvisCommand.g:109:1: func2 : TURN_LEFT PAR1 r= radio COMA g= quarter COMA acc= percent COMA desc= percent COMA vel1= speed COMA vel2= speed PAR2 ;
	public final void func2() throws RecognitionException {
		Double r =null;
		int g =0;
		int acc =0;
		int desc =0;
		Double vel1 =null;
		Double vel2 =null;

		try { dbg.enterRule(getGrammarFileName(), "func2");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(109, 0);

		try {
			// C:\\ANTRL\\JarvisCommand.g:109:7: ( TURN_LEFT PAR1 r= radio COMA g= quarter COMA acc= percent COMA desc= percent COMA vel1= speed COMA vel2= speed PAR2 )
			dbg.enterAlt(1);

			// C:\\ANTRL\\JarvisCommand.g:110:2: TURN_LEFT PAR1 r= radio COMA g= quarter COMA acc= percent COMA desc= percent COMA vel1= speed COMA vel2= speed PAR2
			{
			dbg.location(110,2);
			match(input,TURN_LEFT,FOLLOW_TURN_LEFT_in_func2260); dbg.location(110,12);
			match(input,PAR1,FOLLOW_PAR1_in_func2262); dbg.location(110,18);
			pushFollow(FOLLOW_radio_in_func2266);
			r=radio();
			state._fsp--;
			dbg.location(110,25);
			match(input,COMA,FOLLOW_COMA_in_func2268); dbg.location(110,31);
			pushFollow(FOLLOW_quarter_in_func2272);
			g=quarter();
			state._fsp--;
			dbg.location(110,40);
			match(input,COMA,FOLLOW_COMA_in_func2274); dbg.location(110,48);
			pushFollow(FOLLOW_percent_in_func2278);
			acc=percent();
			state._fsp--;
			dbg.location(110,57);
			match(input,COMA,FOLLOW_COMA_in_func2280); dbg.location(110,66);
			pushFollow(FOLLOW_percent_in_func2284);
			desc=percent();
			state._fsp--;
			dbg.location(110,75);
			match(input,COMA,FOLLOW_COMA_in_func2286); dbg.location(110,84);
			pushFollow(FOLLOW_speed_in_func2290);
			vel1=speed();
			state._fsp--;
			dbg.location(110,91);
			match(input,COMA,FOLLOW_COMA_in_func2292); dbg.location(110,100);
			pushFollow(FOLLOW_speed_in_func2296);
			vel2=speed();
			state._fsp--;
			dbg.location(110,107);
			match(input,PAR2,FOLLOW_PAR2_in_func2298); dbg.location(111,2);

					if(flag == 0 || r == -1.0 || g == 255 || acc == 255 || vel1 == -1.0 || vel2 == -1.0 || desc == 255)
						System.err.println("Error de Compilación");
							else	{
								// GENERACION DE SCRIPT PARA MATLAB
								System.out.println("%Giro a la izquierda");
								System.out.println("Last_Vel = Tray.v(Tray.ind);");
								System.out.println("Tray = Change_Vel(Last_Vel , "+vel1+","+acc+", Tray);%velocidad de recorrido");
								System.out.println("Tray = Change_Vel(Last_Vel , "+vel1+",100 - "+acc+" - "+desc+", Tray);%velocidad de recorrido");
								System.out.println("Tray = Change_Vel("+vel1+" , "+vel2+","+desc+", Tray);%velocidad de recorrido");
													
								System.out.println("Last_X = Tray.x(Tray.ind);");
								System.out.println("Last_Y = Tray.y(Tray.ind);");
								
								System.out.println("Orient = Get_Orient(Tray);%Orientación  a partir de los 2 últimos puntos");
								
								System.out.println("if(Orient == 1)");
								if(g == 2)
								System.out.println("Tray = plot_arc(-pi/2,pi/2,Last_X,Last_Y + "+r+","+r+", Tray);%Trazo curva a la izquierda");
								else
								System.out.println("Tray = plot_arc(-pi/2,0,Last_X,Last_Y + "+r+","+r+", Tray);%Trazo curva a la izquierda");
								System.out.println("end");
								
								System.out.println("if(Orient == 2)");
								if(g == 2)
								System.out.println("Tray = plot_arc(0,pi,Last_X - "+r+",Last_Y,"+r+", Tray);%Trazo curva a la izquierda");
								else
								System.out.println("Tray = plot_arc(0,pi/2,Last_X - "+r+",Last_Y,"+r+", Tray);%Trazo curva a la izquierda");
								System.out.println("end");
								
								System.out.println("if(Orient == 3)");
								if(g == 2)
								System.out.println("Tray = plot_arc(pi/2,1.5*pi,Last_X,Last_Y - "+r+","+r+", Tray);%Trazo curva a la izquierda");
								else
								System.out.println("Tray = plot_arc(pi/2,pi,Last_X,Last_Y - "+r+","+r+", Tray);%Trazo curva a la izquierda");
								System.out.println("end");
								
								System.out.println("if(Orient == 4)");
								if(g == 2)
								System.out.println("Tray = plot_arc(-pi,0,Last_X + "+r+",Last_Y,"+r+", Tray);%Trazo curva a la izquierda");
								else
								System.out.println("Tray = plot_arc(-pi,-pi/2,Last_X + "+r+",Last_Y,"+r+", Tray);%Trazo curva a la izquierda");
								System.out.println("end");
								}
				
